fixed layout issue in towerview

--- a/public/container/style.css
+++ b/public/container/style.css
@@ -43,8 +43,8 @@ body .block-row a.hover.last{padding-right:0}
 body .block-row.large-first .list-story.first{padding-top:0;}
 body .block-row.large-first .list-story.first p.teaser{font-size:1.2em}
 body .block-row.large-first .list-story.last{padding-bottom:0}
-body .block-row.large-first a.hover.first{width:296px;}
-body .block-row.large-first a.hover.first img{width:296px;margin-bottom:0}
+body .block-row.large-first a.hover.first{width:292px;}
+body .block-row.large-first a.hover.first img{width:292px;margin-bottom:0}
 body .rounded,body .rounded-hover{-webkit-border-radius:4px;-moz-border-radius:4px;-o-border-radius:4px;-khtml-border-radius:4px;border-top-left-radius:4px 4px;border-top-right-radius:4px 4px;border-bottom-right-radius:4px 4px;border-bottom-left-radius:4px 4px;-webkit-box-shadow:rgba(0,0,0,0.40) 0 1px 3px;-moz-box-shadow:rgba(0,0,0,0.40) 0 1px 3px;box-shadow:rgba(0,0,0,0.40) 0 1px 3px;background-color:#fff;background:-webkit-gradient(linear,left bottom,left top,color-stop(0,whiteSmoke),color-stop(.33,#fff));background:-moz-linear-gradient(center bottom,whiteSmoke 0%,#fff 33%);float:left}
 body a.rounded-hover{border-left:1px solid transparent;border-right:1px solid transparent;}
 body a.rounded-hover h3{-webkit-transition:color .25s linear;-moz-transition:color .25s linear;-o-transition:color .25s linear;transition:color .25s linear}
